trigger pages build

--- a/backup.html
+++ b/backup.html
@@ -290,18 +290,18 @@
 
 <body class="transition-colors duration-300">
     <!-- Floating right-side icon bar (compact) -->
-    <aside class="fixed right-4 top-1/2 transform -translate-y-1/2 z-50">
-        <div class="sidebar-anim flex flex-col gap-3 p-3 rounded-[100px] border bg-background 
-  [box-shadow:0_0_0_1px_rgba(0,0,0,.03),0_2px_4px_rgba(0,0,0,.05),0_12px_24px_rgba(0,0,0,.05)]
-  animate-[breathe_4s_ease-in-out_infinite] transform-gpu
-  dark:[border:1px_solid_rgba(255,255,255,.1)]
-  dark:[box-shadow:0_-20px_80px_-20px_#ffffff1f_inset]">
+<aside class="fixed bottom-4 left-1/2 transform -translate-x-1/2 z-50">
+        <div class="sidebar-anim flex flex-row items-center gap-3 p-3 rounded-full border bg-background
+          [box-shadow:0_0_0_1px_rgba(0,0,0,.03),0_2px_4px_rgba(0,0,0,.05),0_12px_24px_rgba(0,0,0,.05)]
+          animate-[breathe_4s_ease-in-out_infinite] transform-gpu
+          dark:[border:1px_solid_rgba(255,255,255,.1)]
+          dark:[box-shadow:0_-20px_80px_-20px_#ffffff1f_inset]">
 
             <!-- Home -->
-            <div class="flex aspect-square cursor-pointer items-center justify-center rounded-full icon-anim"
-                style="width:40px" title="Home">
+            <div class="flex cursor-pointer items-center justify-center rounded-full icon-anim"
+                style="width:40px; height:40px" title="Home">
                 <a href="#home"
-                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors rounded-full w-12 h-12 hover:bg-accent hover:text-accent-foreground"
+                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors rounded-full w-10 h-10 hover:bg-accent hover:text-accent-foreground"
                     aria-label="Home">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -313,10 +313,10 @@
             </div>
 
             <!-- Instagram -->
-            <div class="flex aspect-square cursor-pointer items-center justify-center rounded-full icon-anim"
-                style="width:40px" title="Instagram">
+            <div class="flex cursor-pointer items-center justify-center rounded-full icon-anim"
+                style="width:40px; height:40px" title="Instagram">
                 <a href="https://www.instagram.com/hemall_9/" target="_blank" rel="noopener noreferrer"
-                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors rounded-full w-12 h-12 hover:bg-accent hover:text-accent-foreground"
+                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors rounded-full w-10 h-10 hover:bg-accent hover:text-accent-foreground"
                     aria-label="Instagram">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
                         xmlns="http://www.w3.org/2000/svg" class="size-4">
@@ -329,10 +329,10 @@
             </div>
 
             <!-- Email -->
-            <div class="flex aspect-square cursor-pointer items-center justify-center rounded-full icon-anim"
-                style="width:40px" title="Email">
+            <div class="flex cursor-pointer items-center justify-center rounded-full icon-anim"
+                style="width:40px; height:40px" title="Email">
                 <a href="mailto:hemal.shah2004@gmail.com"
-                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors rounded-full w-12 h-12 hover:bg-accent hover:text-accent-foreground"
+                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors rounded-full w-10 h-10 hover:bg-accent hover:text-accent-foreground"
                     aria-label="Email">
                     <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="size-4"
                         fill="currentColor">
@@ -344,8 +344,8 @@
             </div>
 
             <!-- YouTube -->
-            <div class="flex aspect-square cursor-pointer items-center justify-center rounded-full icon-anim"
-                style="width:40px" title="YouTube">
+            <div class="flex cursor-pointer items-center justify-center rounded-full icon-anim"
+                style="width:40px; height:40px" title="YouTube">
                 <a href="https://www.youtube.com/@HK_mixedits" target="_blank" rel="noopener noreferrer"
                     class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors rounded-full w-12 h-12 hover:bg-accent hover:text-accent-foreground">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="size-4">
