updated resume button

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         </p>
 
                         <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start reveal">
-                            <a href="#"
+                            <a href="resources/Resume.pdf"
                                 class="hover-lift bg-white text-blue-600 px-8 py-4 rounded-lg font-semibold flex items-center justify-center gap-2">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
