--- a/blogs.html
+++ b/blogs.html
@@ -144,7 +144,7 @@
                     </svg>
                 </a>
             </div>
-            
+
             <!-- Instagram -->
             <div class="nav-btn icon-anim" title="Instagram">
                 <a href="https://www.instagram.com/hemall_9/" target="_blank">
@@ -193,7 +193,7 @@
         <!-- BLOG ITEM (PREMIUM INTERACTIVE CARD) -->
         <a class="group block p-6 border border-white/10 rounded-xl backdrop-blur-sm
            bg-white/5 hover:bg-white/10 transition-all duration-300 reveal
-           hover:-translate-y-1 hover:shadow-lg hover:shadow-black/30" href="/blogs/blog1.html">
+           hover:-translate-y-1 hover:shadow-lg hover:shadow-black/30" href="blog1.html">
 
             <div class="flex flex-row items-center justify-between">
 
