Fix blog file name

--- a/blogs.html
+++ b/blogs.html
@@ -193,7 +193,7 @@
         <!-- BLOG ITEM (PREMIUM INTERACTIVE CARD) -->
         <a class="group block p-6 border border-white/10 rounded-xl backdrop-blur-sm
            bg-white/5 hover:bg-white/10 transition-all duration-300 reveal
-           hover:-translate-y-1 hover:shadow-lg hover:shadow-black/30" href="blog1.html">
+           hover:-translate-y-1 hover:shadow-lg hover:shadow-black/30" href="blog/blog1.html">
 
             <div class="flex flex-row items-center justify-between">
 
